--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
             <a href="reading-courses-1.html">
               <img
                 class="card-img-top lazy"
-                data-src="img/courses-1.png"
-                src="img/courses-1.png"
+                data-src="img/courses-1.webp"
+                src="img/courses-1.webp"
                 style=""
             /></a>
             <div class="card-body" style="text-align: center">
@@ -362,8 +362,8 @@
             <a href="recitation-courses-2.html">
               <img
                 class="card-img-top lazy"
-                data-src="img/courses-2.png"
-                src="img/courses-2.png"
+                data-src="img/courses-2.webp"
+                src="img/courses-2.webp"
                 style=""
             /></a>
             <div class="card-body" style="text-align: center">
@@ -388,8 +388,8 @@
             <a href="tajweet-courses-3.html">
               <img
                 class="card-img-top lazy"
-                data-src="img/courses-3.png"
-                src="img/courses-3.png"
+                data-src="img/courses-3.webp"
+                src="img/courses-3.webp"
                 style=""
             /></a>
             <div class="card-body" style="text-align: center">
@@ -414,8 +414,8 @@
             <a href="memorization-courses-4.html">
               <img
                 class="card-img-top lazy"
-                data-src="img/courses-4.png"
-                src="img/courses-4.png"
+                data-src="img/courses-4.webp"
+                src="img/courses-4.webp"
                 style=""
             /></a>
             <div class="card-body" style="text-align: center">
@@ -442,8 +442,8 @@
             <a href="islamic-courses-5.html">
               <img
                 class="card-img-top lazy"
-                data-src="img/courses-5.png"
-                src="img/courses-5.png"
+                data-src="img/courses-5.webp"
+                src="img/courses-5.webp"
                 style=""
             /></a>
             <div class="card-body" style="text-align: center">
@@ -468,8 +468,8 @@
             <a href="learn-arabic-courses-6.html">
               <img
                 class="card-img-top lazy"
-                data-src="img/courses-6.png"
-                src="img/courses-6.png"
+                data-src="img/courses-6.webp"
+                src="img/courses-6.webp"
                 style=""
             /></a>
             <div class="card-body" style="text-align: center">
@@ -516,7 +516,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-1.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-1.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -546,7 +546,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-2.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-2.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -576,7 +576,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-3.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-3.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -606,7 +606,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-4.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-4.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -842,7 +842,7 @@
         <div class="col-lg-6 col-xl-4">
           <div class="blog-item wow fadeIn" data-wow-delay="0.3s">
             <div class="blog-img position-relative overflow-hidden">
-              <img src="img/blog-2.jpg" class="img-fluid w-100" alt="">
+              <img src="img/blog-2.webp" class="img-fluid w-100" alt="">
               <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan
                 2024</div>
             </div>
@@ -931,7 +931,7 @@
       <div class="row g-5">
         <div class="col-lg-4 col-xl-5">
           <div class="team-img wow zoomIn" data-wow-delay="0.1s">
-            <img src="img/team-1.jpg" class="img-fluid" alt="" />
+            <img src="img/team-1.webp" class="img-fluid" alt="" />
           </div>
         </div>
         <div class="col-lg-8 col-xl-7">
@@ -964,7 +964,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.2s">
-                <img src="img/team-2.jpg" class="img-fluid w-100" alt="" />
+                <img src="img/team-2.webp" class="img-fluid w-100" alt="" />
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Mustafa Kamal</h5>
@@ -981,7 +981,7 @@
             </div>
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.4s">
-                <img src="img/team-3.jpg" class="img-fluid w-100" alt="" />
+                <img src="img/team-3.webp" class="img-fluid w-100" alt="" />
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Nahiyan Momen</h5>
@@ -998,7 +998,7 @@
             </div>
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.6s">
-                <img src="img/team-4.jpg" class="img-fluid w-100" alt="" />
+                <img src="img/team-4.webp" class="img-fluid w-100" alt="" />
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Asfaque Ali</h5>
@@ -1114,14 +1114,14 @@
           <div class="footer-item mt-5">
             <h4 class="text-light mb-4">Latest Post</h4>
             <div class="d-flex border-bottom border-secondary py-4">
-              <img src="img/blog-mini-1.jpg" class="img-fluid flex-shrink-0" alt="">
+              <img src="img/blog-mini-1.webp" class="img-fluid flex-shrink-0" alt="">
               <div class="ps-3">
                 <p class="mb-0 text-muted">01 Jan 2024</p>
                 <a href="blog-more-7.html" class="text-body">Which Surah has Two Bismillah?</a>
               </div>
             </div>
             <div class="d-flex py-4">
-              <img src="img/blog-mini-2.jpg" class="img-fluid flex-shrink-0" alt="">
+              <img src="img/blog-mini-2.webp" class="img-fluid flex-shrink-0" alt="">
               <div class="ps-3">
                 <p class="mb-0 text-muted">01 Jan 2024</p>
                 <a href="blog-more-8.html" class="text-body">Why Do Muslims Memorize The Quran</a>
