--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap"
-    rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap"
+    rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <!-- Icon Font Stylesheet -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
@@ -516,7 +517,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-1.webp" class="img-fluid" alt="" />
+              <img src="img/testimonial-1.webp" class="img-fluid" alt=""  lazy />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -546,7 +547,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-2.webp" class="img-fluid" alt="" />
+              <img src="img/testimonial-2.webp" class="img-fluid" alt="" lazy/>
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -576,7 +577,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-3.webp" class="img-fluid" alt="" />
+              <img src="img/testimonial-3.webp" class="img-fluid" alt="" lazy />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -606,7 +607,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-4.webp" class="img-fluid" alt="" />
+              <img src="img/testimonial-4.webp" class="img-fluid" alt="" lazy />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -811,7 +812,7 @@
         <div class="col-lg-6 col-xl-4">
           <div class="blog-item wow fadeIn" data-wow-delay="0.1s">
             <div class="blog-img position-relative overflow-hidden">
-              <img src="img/blog-1.webp" class="img-fluid w-100" alt="">
+              <img src="img/blog-1.webp" class="img-fluid w-100" alt="" lazy>
               <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan
                 2024</div>
             </div>
@@ -842,7 +843,7 @@
         <div class="col-lg-6 col-xl-4">
           <div class="blog-item wow fadeIn" data-wow-delay="0.3s">
             <div class="blog-img position-relative overflow-hidden">
-              <img src="img/blog-2.webp" class="img-fluid w-100" alt="">
+              <img src="img/blog-2.webp" class="img-fluid w-100" alt="" lazy>
               <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan
                 2024</div>
             </div>
@@ -879,7 +880,7 @@
         <div class="col-lg-6 col-xl-4">
           <div class="blog-item wow fadeIn" data-wow-delay="0.5s">
             <div class="blog-img position-relative overflow-hidden">
-              <img src="img/blog-3.webp" class="img-fluid w-100" alt="">
+              <img src="img/blog-3.webp" class="img-fluid w-100" alt="" lazy>
               <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan
                 2024</div>
             </div>
@@ -931,7 +932,7 @@
       <div class="row g-5">
         <div class="col-lg-4 col-xl-5">
           <div class="team-img wow zoomIn" data-wow-delay="0.1s">
-            <img src="img/team-1.webp" class="img-fluid" alt="" />
+            <img src="img/team-1.webp" class="img-fluid" alt="" lazy />
           </div>
         </div>
         <div class="col-lg-8 col-xl-7">
@@ -964,7 +965,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.2s">
-                <img src="img/team-2.webp" class="img-fluid w-100" alt="" />
+                <img src="img/team-2.webp" class="img-fluid w-100" alt=""  lazy/>
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Mustafa Kamal</h5>
@@ -981,7 +982,7 @@
             </div>
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.4s">
-                <img src="img/team-3.webp" class="img-fluid w-100" alt="" />
+                <img src="img/team-3.webp" class="img-fluid w-100" alt=""  lazy/>
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Nahiyan Momen</h5>
@@ -998,7 +999,7 @@
             </div>
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.6s">
-                <img src="img/team-4.webp" class="img-fluid w-100" alt="" />
+                <img src="img/team-4.webp" class="img-fluid w-100" alt=""  lazy/>
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Asfaque Ali</h5>
@@ -1114,14 +1115,14 @@
           <div class="footer-item mt-5">
             <h4 class="text-light mb-4">Latest Post</h4>
             <div class="d-flex border-bottom border-secondary py-4">
-              <img src="img/blog-mini-1.webp" class="img-fluid flex-shrink-0" alt="">
+              <img src="img/blog-mini-1.webp" class="img-fluid flex-shrink-0" alt="" lazy>
               <div class="ps-3">
                 <p class="mb-0 text-muted">01 Jan 2024</p>
                 <a href="blog-more-7.html" class="text-body">Which Surah has Two Bismillah?</a>
               </div>
             </div>
             <div class="d-flex py-4">
-              <img src="img/blog-mini-2.webp" class="img-fluid flex-shrink-0" alt="">
+              <img src="img/blog-mini-2.webp" class="img-fluid flex-shrink-0" alt="" lazy>
               <div class="ps-3">
                 <p class="mb-0 text-muted">01 Jan 2024</p>
                 <a href="blog-more-8.html" class="text-body">Why Do Muslims Memorize The Quran</a>
@@ -1151,15 +1152,15 @@
 
 
   <!-- JavaScript Libraries -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/wow/wow.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/waypoints/waypoints.min.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js defer"></script>
+  <script src="lib/wow/wow.min.js defer"></script>
+  <script src="lib/easing/easing.min.js defer"></script>
+  <script src="lib/waypoints/waypoints.min.js defer"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js defer"></script>
 
   <!-- Template Javascript -->
-  <script src="js/main.js"></script>
+  <script src="js/main.js" defer></script>
 </body>
 
 </html>
