--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <div class="container-fluid hero-header position-relative overflow-hidden">
 
   <!-- صورة الهيرو (LCP) -->
-  <img src="img/hero.jpg" 
+  <img src="img/hero.webp" 
        alt="Quran Hero"
        class="hero-bg-img position-absolute w-100 h-100"
        style="object-fit: cover; top: 0; left: 0; z-index: -1;"
@@ -1178,4 +1178,5 @@
 </body>
 
 </html>
+
 
