--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
   <meta name="twitter:data2" content="5 minutes"/>
 
   <!-- Google Web Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap"
+   rel="preconnect" href="https://fonts.googleapis.com">
+   rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!--  href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap"
     rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+   href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <!-- Icon Font Stylesheet -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+   rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Libraries Stylesheet -->
-  <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+   href="lib/animate/animate.min.css" rel="stylesheet">
+   href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Customized Bootstrap Stylesheet -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" media="all">
 
 
 
@@ -63,6 +63,7 @@
 .text-w {
   font-size: 1rem !important;
 }
+  }
   /* About */
   .card-about {
     height: 300px;
@@ -1178,5 +1179,6 @@
 </body>
 
 </html>
+
 
 
