--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
   <meta name="twitter:data2" content="5 minutes"/>
 
   <!-- Google Web Fonts -->
-   rel="preconnect" href="https://fonts.googleapis.com">
-   rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!--  href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap"
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <!-- href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap"
     rel="stylesheet"> -->
-   href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <!-- Icon Font Stylesheet -->
    rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Libraries Stylesheet -->
-   href="lib/animate/animate.min.css" rel="stylesheet">
-   href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+   <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Customized Bootstrap Stylesheet -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -1179,6 +1179,7 @@
 </body>
 
 </html>
+
 
 
 
