--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <!-- Icon Font Stylesheet -->
-   rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Libraries Stylesheet -->
    <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -1179,6 +1179,7 @@
 </body>
 
 </html>
+
 
 
 
