--- a/index.html
+++ b/index.html
@@ -29,26 +29,31 @@
   <meta name="twitter:label2" content="Time to read"/>
   <meta name="twitter:data2" content="5 minutes"/>
 
-  <!-- Google Web Fonts -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <!-- href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Pacifico&display=swap"
-    rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<!-- Icon Font Stylesheet -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Icon Font Stylesheet -->
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+<!-- Preload CSS Critical -->
+<link rel="preload" href="css/bootstrap.min.css" as="style" />
+<link rel="preload" href="css/style.css" as="style" />
 
-  <!-- Libraries Stylesheet -->
-   <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+<!-- Load Critical CSS (Customized Bootstrap Stylesheet) -->
+<link href="css/bootstrap.min.css" rel="stylesheet" />
+<link href="css/style.css" rel="stylesheet" media="all" />
 
-  <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- Load Non-Critical CSS without blocking render -->
+<link href="lib/animate/animate.min.css" rel="stylesheet" media="print" onload="this.media='all'">
+<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" media="print" onload="this.media='all'">
 
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+
+  
   <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet" media="all">
+  <!-- <link href="css/style.css" rel="stylesheet" media="all"> -->
 
 
 
@@ -1180,6 +1185,7 @@
 </body>
 
 </html>
+
 
 
 
