--- a/index.html
+++ b/index.html
@@ -358,11 +358,15 @@
           <div class="card w-100 box_sadow">
             <a href="reading-courses-1.html">
               <img
-                class="card-img-top lazy"
-                data-src="img/courses-1.webp"
-                src="img/courses-1.webp"
-                style=""
+src="img/courses-1.webp"
+  alt="Quran Courses"
+  class="card-img-top"
+  loading="lazy"
+  width="400"
+  height="300"
+  style="object-fit:cover;"
             /></a>
+            
             <div class="card-body" style="text-align: center">
               <h5 class="card-title">Reading Quran course</h5>
               <p class="card-text">
@@ -384,10 +388,13 @@
           <div class="card w-100 box_sadow">
             <a href="recitation-courses-2.html">
               <img
-                class="card-img-top lazy"
-                data-src="img/courses-2.webp"
-                src="img/courses-2.webp"
-                style=""
+src="img/courses-2.webp"
+  alt="Quran Courses"
+  class="card-img-top"
+  loading="lazy"
+  width="400"
+  height="300"
+  style="object-fit:cover;"
             /></a>
             <div class="card-body" style="text-align: center">
               <h5 class="card-title">Quran Recitation</h5>
@@ -410,10 +417,13 @@
           <div class="card w-100 box_sadow">
             <a href="tajweet-courses-3.html">
               <img
-                class="card-img-top lazy"
-                data-src="img/courses-3.webp"
-                src="img/courses-3.webp"
-                style=""
+src="img/courses-3.webp"
+  alt="Quran Courses"
+  class="card-img-top"
+  loading="lazy"
+  width="400"
+  height="300"
+  style="object-fit: cover;"
             /></a>
             <div class="card-body" style="text-align: center">
               <h5 class="card-title">Tajweed Quran</h5>
@@ -436,10 +446,13 @@
           <div class="card w-100 box_sadow">
             <a href="memorization-courses-4.html">
               <img
-                class="card-img-top lazy"
-                data-src="img/courses-4.webp"
-                src="img/courses-4.webp"
-                style=""
+  src="img/courses-4.webp"
+  alt="Quran Courses"
+  class="card-img-top"
+  loading="lazy"
+  width="400"
+  height="300"
+  style="object-fit: cover;"
             /></a>
             <div class="card-body" style="text-align: center">
               <h5 class="card-title">Quran Memorization</h5>
@@ -464,10 +477,13 @@
           <div class="card w-100 box_sadow">
             <a href="islamic-courses-5.html">
               <img
-                class="card-img-top lazy"
-                data-src="img/courses-5.webp"
-                src="img/courses-5.webp"
-                style=""
+  src="img/courses-5.webp"
+  alt="Quran Courses"
+  class="card-img-top"
+  loading="lazy"
+  width="400"
+  height="300"
+  style="object-fit: cover;"
             /></a>
             <div class="card-body" style="text-align: center">
               <h5 class="card-title">Islamic Studies</h5>
@@ -490,10 +506,13 @@
           <div class="card w-100 box_sadow">
             <a href="learn-arabic-courses-6.html">
               <img
-                class="card-img-top lazy"
-                data-src="img/courses-6.webp"
-                src="img/courses-6.webp"
-                style=""
+     src="img/courses-6.webp"
+  alt="Quran Courses"
+  class="card-img-top"
+  loading="lazy"
+  width="400"
+  height="300"
+  style="object-fit: cover;"
             /></a>
             <div class="card-body" style="text-align: center">
               <h5 class="card-title">Learn Arabic</h5>
@@ -539,7 +558,13 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-1.webp" class="img-fluid" alt=""  lazy />
+              <img  src="img/testimonial-1.webp"
+  alt="Student Testimonial"
+  class="img-fluid"
+  loading="lazy"
+  width="120"
+  height="120"
+  style="object-fit: cover; border-radius: 50%;" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -569,7 +594,16 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-2.webp" class="img-fluid" alt="" lazy/>
+              <img
+  src="img/testimonial-2.webp"
+  alt="Student Testimonial"
+  class="img-fluid"
+  loading="lazy"
+  width="120"
+  height="120"
+  style="object-fit: cover; border-radius: 50%;"
+/>
+
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -599,7 +633,15 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-3.webp" class="img-fluid" alt="" lazy />
+              <img
+  src="img/testimonial-3.webp"
+  alt="Student Testimonial"
+  class="img-fluid"
+  loading="lazy"
+  width="120"
+  height="120"
+  style="object-fit: cover; border-radius: 50%;"
+/>
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -629,7 +671,16 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-4.webp" class="img-fluid" alt="" lazy />
+              <img
+  src="img/testimonial-4.webp"
+  alt="Student Testimonial"
+  class="img-fluid"
+  loading="lazy"
+  width="120"
+  height="120"
+  style="object-fit: cover; border-radius: 50%;"
+/>
+
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -834,7 +885,16 @@
         <div class="col-lg-6 col-xl-4">
           <div class="blog-item wow fadeIn" data-wow-delay="0.1s">
             <div class="blog-img position-relative overflow-hidden">
-              <img src="img/blog-1.webp" class="img-fluid w-100" alt="" lazy>
+              <img
+  src="img/blog-1.webp"
+  alt="Blog Article Thumbnail"
+  class="img-fluid w-100"
+  loading="lazy"
+  width="400"
+  height="250"
+  style="object-fit: cover; border-radius: 8px;"
+/>
+
               <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan
                 2024</div>
             </div>
@@ -865,7 +925,16 @@
         <div class="col-lg-6 col-xl-4">
           <div class="blog-item wow fadeIn" data-wow-delay="0.3s">
             <div class="blog-img position-relative overflow-hidden">
-              <img src="img/blog-2.webp" class="img-fluid w-100" alt="" lazy>
+             <img
+  src="img/blog-2.webp"
+  alt="Blog Article Thumbnail"
+  class="img-fluid w-100"
+  loading="lazy"
+  width="400"
+  height="250"
+  style="object-fit: cover; border-radius: 8px;"
+/>
+
               <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan
                 2024</div>
             </div>
@@ -902,7 +971,16 @@
         <div class="col-lg-6 col-xl-4">
           <div class="blog-item wow fadeIn" data-wow-delay="0.5s">
             <div class="blog-img position-relative overflow-hidden">
-              <img src="img/blog-3.webp" class="img-fluid w-100" alt="" lazy>
+              <img
+  src="img/blog-3.webp"
+  alt="Islamic Education Blog Thumbnail"
+  class="img-fluid w-100"
+  loading="lazy"
+  width="400"
+  height="250"
+  style="object-fit: cover; border-radius: 8px;"
+/>
+
               <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan
                 2024</div>
             </div>
@@ -954,7 +1032,16 @@
       <div class="row g-5">
         <div class="col-lg-4 col-xl-5">
           <div class="team-img wow zoomIn" data-wow-delay="0.1s">
-            <img src="img/team-1.webp" class="img-fluid" alt="" lazy />
+            <img
+  src="img/team-1.webp"
+  alt="Qualified Quran Tutor"
+  class="img-fluid w-100"
+  loading="lazy"
+  width="300"
+  height="350"
+  style="object-fit: cover; border-radius: 8px;"
+/>
+
           </div>
         </div>
         <div class="col-lg-8 col-xl-7">
@@ -987,7 +1074,16 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.2s">
-                <img src="img/team-2.webp" class="img-fluid w-100" alt=""  lazy/>
+                <img
+  src="img/team-2.webp"
+  alt="Quran Teacher"
+  class="img-fluid w-100"
+  loading="lazy"
+  width="400"
+  height="450"
+  style="object-fit: cover; border-radius: 8px;"
+/>
+
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Mustafa Kamal</h5>
@@ -1004,7 +1100,16 @@
             </div>
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.4s">
-                <img src="img/team-3.webp" class="img-fluid w-100" alt=""  lazy/>
+                <img
+  src="img/team-3.webp"
+  alt="Quran Tutor"
+  class="img-fluid w-100"
+  loading="lazy"
+  width="400"
+  height="450"
+  style="object-fit: cover; border-radius: 8px;"
+/>
+
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Nahiyan Momen</h5>
@@ -1021,7 +1126,16 @@
             </div>
             <div class="col-md-4">
               <div class="team-item wow zoomIn" data-wow-delay="0.6s">
-                <img src="img/team-4.webp" class="img-fluid w-100" alt=""  lazy/>
+                <img
+  src="img/team-4.webp"
+  alt="Quran Tutor"
+  class="img-fluid w-100"
+  loading="lazy"
+  width="400"
+  height="450"
+  style="object-fit: cover; border-radius: 8px;"
+/>
+
                 <div class="team-content text-dark text-center py-3">
                   <div class="team-content-inner">
                     <h5 class="mb-0">Asfaque Ali</h5>
@@ -1137,14 +1251,32 @@
           <div class="footer-item mt-5">
             <h4 class="text-light mb-4">Latest Post</h4>
             <div class="d-flex border-bottom border-secondary py-4">
-              <img src="img/blog-mini-1.webp" class="img-fluid flex-shrink-0" alt="" lazy>
+              <img
+  src="img/blog-mini-1.webp"
+  alt="Quran Blog Article"
+  class="img-fluid flex-shrink-0"
+  loading="lazy"
+  width="120"
+  height="90"
+  style="object-fit: cover; border-radius: 6px;"
+/>
+
               <div class="ps-3">
                 <p class="mb-0 text-muted">01 Jan 2024</p>
                 <a href="blog-more-7.html" class="text-body">Which Surah has Two Bismillah?</a>
               </div>
             </div>
             <div class="d-flex py-4">
-              <img src="img/blog-mini-2.webp" class="img-fluid flex-shrink-0" alt="" lazy>
+              <img
+  src="img/blog-mini-2.webp"
+  alt="Islamic Article Thumbnail"
+  class="img-fluid flex-shrink-0"
+  loading="lazy"
+  width="120"
+  height="90"
+  style="object-fit: cover; border-radius: 6px;"
+/>
+
               <div class="ps-3">
                 <p class="mb-0 text-muted">01 Jan 2024</p>
                 <a href="blog-more-8.html" class="text-body">Why Do Muslims Memorize The Quran</a>
@@ -1187,6 +1319,7 @@
 </body>
 
 </html>
+
 
 
 
