--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
   <meta name="twitter:label2" content="Time to read"/>
   <meta name="twitter:data2" content="5 minutes"/>
 
+
+    <!-- Template Stylesheet -->
+  <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="css/style.css"></noscript>
+
 <!-- Icon Font Stylesheet -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  
 
 <!-- Preload CSS Critical -->
 <link rel="preload" href="css/bootstrap.min.css" as="style" />
@@ -48,12 +54,15 @@
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  
+  
 
 
   
-  <!-- Template Stylesheet -->
-  <!-- <link href="css/style.css" rel="stylesheet" media="all"> -->
+
+
 
 
 
@@ -1319,6 +1328,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
