--- a/listening-quran.html
+++ b/listening-quran.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Listening Quran - Nour Al-Qur’an Academy</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta name="keywords" content="القرآن, تلاوة, تعلم القرآن, نور القرآن, استماع القرآن">
+    <meta name="description" content="استمع للقرآن الكريم مع أكاديمية نور القرآن. اختر من بين أشهر القراء وتعلم التلاوة الصحيحة.">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -539,3 +539,4 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
