--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Nour Al-Qur’an Academy - Home</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
+  <meta name="keywords" content="القرآن, تلاوة, تعلم القرآن, نور القرآن, استماع القرآن">
   <meta name="description" content="Learn Quran online with Noor Al-Quran Academy. Expert tutors for kids and adults teaching Tajweed, Quran memorization (Hifz), Tafseer, and Arabic language — anytime, anywhere.">
     <!-- SEO -->
   <meta name="description" content="Noor Al-quran with expert tutors for kids and adults who want to learn Quran online with Tajweed, Quran Memorization, &amp; Quran translation with Tafseer."/>
@@ -1328,6 +1328,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
