--- a/blog-more-1.html
+++ b/blog-more-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="utf-8">
-  <title>Nour Al-Qur’an Academy - Blog More</title>
+  <title>Nour Al-Qur’an Academy - Blog-More</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="keywords" content="القرآن, تلاوة, تعلم القرآن, نور القرآن, استماع القرآن">
   <meta name="description" content="Learn Quran online with Noor Al-Quran Academy. Expert tutors for kids and adults teaching Tajweed, Quran memorization (Hifz), Tafseer, and Arabic language — anytime, anywhere.">
@@ -560,4 +560,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
