--- a/how-to-get-closer-to-allah-sermon.html
+++ b/how-to-get-closer-to-allah-sermon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Nour Al-Qur’an Academy - How-to-get</title>
+  <title>Nour Al-Qur’an Academy - Sermon</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="keywords" content="القرآن, تلاوة, تعلم القرآن, نور القرآن, استماع القرآن">
   <meta name="description" content="Learn Quran online with Noor Al-Quran Academy. Expert tutors for kids and adults teaching Tajweed, Quran memorization (Hifz), Tafseer, and Arabic language — anytime, anywhere.">
@@ -437,4 +437,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
