--- a/404.html
+++ b/404.html
@@ -228,14 +228,14 @@
                         <div class="footer-item mt-5">
                             <h4 class="text-light mb-4">Latest Post</h4>
                             <div class="d-flex border-bottom border-secondary py-4">
-                                <img src="img/blog-mini-1.jpg" class="img-fluid flex-shrink-0" alt="">
+                                <img src="img/blog-mini-1.webp" class="img-fluid flex-shrink-0" alt="">
                                 <div class="ps-3">
                                     <p class="mb-0 text-muted">01 Jan 2045</p>
                                     <a href="" class="text-body">Lorem ipsum dolor sit amet elit eros vel</a>
                                 </div>
                             </div>
                             <div class="d-flex py-4">
-                                <img src="img/blog-mini-2.jpg" class="img-fluid flex-shrink-0" alt="">
+                                <img src="img/blog-mini-2.webp" class="img-fluid flex-shrink-0" alt="">
                                 <div class="ps-3">
                                     <p class="mb-0 text-muted">01 Jan 2045</p>
                                     <a href="" class="text-body">Lorem ipsum dolor sit amet elit eros vel</a>
@@ -282,3 +282,4 @@
 
 
 </html>
+
