--- a/about.html
+++ b/about.html
@@ -294,7 +294,7 @@
         <div class="row g-5">
           <div class="col-lg-4 col-xl-5">
             <div class="team-img wow zoomIn" data-wow-delay="0.1s">
-              <img src="img/team-1.jpg" class="img-fluid" alt="" />
+              <img src="img/team-1.webp" class="img-fluid" alt="" />
             </div>
           </div>
           <div class="col-lg-8 col-xl-7">
@@ -337,7 +337,7 @@
             <div class="row g-4">
               <div class="col-md-4">
                 <div class="team-item wow zoomIn" data-wow-delay="0.2s">
-                  <img src="img/team-2.jpg" class="img-fluid w-100" alt="" />
+                  <img src="img/team-2.webp" class="img-fluid w-100" alt="" />
                   <div class="team-content text-dark text-center py-3">
                     <div class="team-content-inner">
                       <h5 class="mb-0">Mustafa Kamal</h5>
@@ -364,7 +364,7 @@
               </div>
               <div class="col-md-4">
                 <div class="team-item wow zoomIn" data-wow-delay="0.4s">
-                  <img src="img/team-3.jpg" class="img-fluid w-100" alt="" />
+                  <img src="img/team-3.webp" class="img-fluid w-100" alt="" />
                   <div class="team-content text-dark text-center py-3">
                     <div class="team-content-inner">
                       <h5 class="mb-0">Nahiyan Momen</h5>
@@ -391,7 +391,7 @@
               </div>
               <div class="col-md-4">
                 <div class="team-item wow zoomIn" data-wow-delay="0.6s">
-                  <img src="img/team-4.jpg" class="img-fluid w-100" alt="" />
+                  <img src="img/team-4.webp" class="img-fluid w-100" alt="" />
                   <div class="team-content text-dark text-center py-3">
                     <div class="team-content-inner">
                       <h5 class="mb-0">Asfaque Ali</h5>
@@ -434,7 +434,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-1.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-1.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -464,7 +464,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-2.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-2.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -494,7 +494,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-3.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-3.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -524,7 +524,7 @@
         <div class="testimonial-item">
           <div class="d-flex mb-3">
             <div class="position-relative">
-              <img src="img/testimonial-4.jpg" class="img-fluid" alt="" />
+              <img src="img/testimonial-4.webp" class="img-fluid" alt="" />
               <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px">
                 <i class="fa fa-quote-left text-dark"></i>
               </div>
@@ -649,7 +649,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -662,7 +662,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -710,4 +710,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
