--- a/blog-more-5.html
+++ b/blog-more-5.html
@@ -591,7 +591,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -604,7 +604,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -652,4 +652,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
