--- a/blog-more-7.html
+++ b/blog-more-7.html
@@ -543,7 +543,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -556,7 +556,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -604,4 +604,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
