--- a/blog.html
+++ b/blog.html
@@ -193,7 +193,7 @@
                     <div class="col-lg-6 col-xl-4">
                         <div class="blog-item wow fadeIn" data-wow-delay="0.3s">
                             <div class="blog-img position-relative overflow-hidden">
-                                <img src="img/blog-2.jpg" class="img-fluid w-100" alt="">
+                                <img src="img/blog-2.webp" class="img-fluid w-100" alt="">
                                 <div class="bg-primary d-inline px-3 py-2 text-center text-white position-absolute top-0 end-0">01 Jan 2024</div>
                             </div>
                             <div class="p-4">
@@ -396,14 +396,14 @@ Interactive Apps: Like "HelloTalk" to practice with native speakers.</p>
                         <div class="footer-item mt-5">
                             <h4 class="text-light mb-4">Latest Post</h4>
                             <div class="d-flex border-bottom border-secondary py-4">
-                                <img src="img/blog-mini-1.jpg" class="img-fluid flex-shrink-0" alt="">
+                                <img src="img/blog-mini-1.webp" class="img-fluid flex-shrink-0" alt="">
                                 <div class="ps-3">
                                     <p class="mb-0 text-muted">01 Jan 2024</p>
                                     <a href="blog-more-7.html" class="text-body">Which Surah has Two Bismillah?</a>
                                 </div>
                             </div>
                             <div class="d-flex py-4">
-                                <img src="img/blog-mini-2.jpg" class="img-fluid flex-shrink-0" alt="">
+                                <img src="img/blog-mini-2.webp" class="img-fluid flex-shrink-0" alt="">
                                 <div class="ps-3">
                                     <p class="mb-0 text-muted">01 Jan 2024</p>
                                     <a href="blog-more-8.html" class="text-body">Why Do Muslims Memorize The Quran</a>
@@ -447,3 +447,4 @@ Interactive Apps: Like "HelloTalk" to practice with native speakers.</p>
 
 
 </html>
+
