--- a/how-to-get-closer-to-allah-sermon.html
+++ b/how-to-get-closer-to-allah-sermon.html
@@ -227,7 +227,7 @@
     <!-- Start How to Get Closer to Allah Through Online Quran Learning -->
     <section class="section">
       <h1>How to Get Closer to Allah Through Online Quran Learning</h1>
-      <img src="img/sermon-1.jpg" alt="Sermon illustration">
+      <img src="img/sermon-1.webp" alt="Sermon illustration">
       <p>All praise is due to Allah, who revealed the Holy Quran as a guidance and mercy to all of humanity. We praise Him, seek His help, and ask for His forgiveness. We seek refuge in Allah from the evil of our own selves and from our wrong actions.</p>
       
       <p>Dear brothers and sisters, one of the greatest ways to get closer to Allah is through learning the Quran. The Quran is the Word of Allah, a book of wisdom and guidance, protected and preserved until the Day of Judgment.</p>
@@ -376,7 +376,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -389,7 +389,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -437,5 +437,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
