--- a/sermon.html
+++ b/sermon.html
@@ -171,7 +171,7 @@
                     <div class="col-lg-6 col-xl-4">
                         <div class="sermon-item wow fadeIn" data-wow-delay="0.1s">
                             <div class="overflow-hidden p-4 pb-0">
-                                <a href="how-to-get-closer-to-allah-sermon.html"><img src="img/sermon-1.jpg" class="img-fluid w-100" alt=""></a>
+                                <a href="how-to-get-closer-to-allah-sermon.html"><img src="img/sermon-1.webp" class="img-fluid w-100" alt=""></a>
                             </div>
                             <div class="p-4">
                                 <div class="sermon-meta d-flex justify-content-between pb-2">
@@ -194,7 +194,7 @@
                    <div class="col-lg-6 col-xl-4">
                         <div class="sermon-item wow fadeIn" data-wow-delay="0.3s">
                             <div class="overflow-hidden p-4 pb-0">
-                                <a href="the-importance-of-hajj-in-islam-sermon.html"><img src="img/sermon-2.jpg" class="img-fluid w-100" alt=""></a>
+                                <a href="the-importance-of-hajj-in-islam-sermon.html"><img src="img/sermon-2.webp" class="img-fluid w-100" alt=""></a>
                             </div>
                             <div class="p-4">
                                 <div class="sermon-meta d-flex justify-content-between pb-2">
@@ -217,7 +217,7 @@
                    <div class="col-lg-6 col-xl-4">
                         <div class="sermon-item wow fadeIn" data-wow-delay="0.5s">
                             <div class="overflow-hidden p-4 pb-0">
-                                <a href="pillars-of-islam-sermon.html"><img src="img/sermon-3.jpg" class="img-fluid w-100" alt=""></a>
+                                <a href="pillars-of-islam-sermon.html"><img src="img/sermon-3.webp" class="img-fluid w-100" alt=""></a>
                             </div>
                             <div class="p-4">
                                 <div class="sermon-meta d-flex justify-content-between pb-2">
@@ -303,14 +303,14 @@
                         <div class="footer-item mt-5">
                             <h4 class="text-light mb-4">Latest Post</h4>
                             <div class="d-flex border-bottom border-secondary py-4">
-                                <img src="img/blog-mini-1.jpg" class="img-fluid flex-shrink-0" alt="">
+                                <img src="img/blog-mini-1.webp" class="img-fluid flex-shrink-0" alt="">
                                 <div class="ps-3">
                                     <p class="mb-0 text-muted">01 Jan 2024</p>
                                     <a href="blog-more-7.html" class="text-body">Which Surah has Two Bismillah?</a>
                                 </div>
                             </div>
                             <div class="d-flex py-4">
-                                <img src="img/blog-mini-2.jpg" class="img-fluid flex-shrink-0" alt="">
+                                <img src="img/blog-mini-2.webp" class="img-fluid flex-shrink-0" alt="">
                                 <div class="ps-3">
                                     <p class="mb-0 text-muted">01 Jan 2024</p>
                                     <a href="blog-more-8.html" class="text-body">Why Do Muslims Memorize The Quran</a>
@@ -353,3 +353,4 @@
 
 
 </html>
+
