--- a/the-importance-of-hajj-in-islam-sermon.html
+++ b/the-importance-of-hajj-in-islam-sermon.html
@@ -227,7 +227,7 @@
 <!-- Start The Importance of Hajj in Islam -->
 <section class="section">
     <h1>The Importance of Hajj in Islam: Learn Its Concepts Through Online Quran Classes</h1>
-    <img src="img/sermon-2.jpg" alt="Hajj illustration">
+    <img src="img/sermon-2.webp" alt="Hajj illustration">
     <p>All praise is due to Allah, who ordained the Hajj as one of the pillars of Islam. We praise Him, seek His help, and ask for His forgiveness. We seek refuge in Allah from the evil of our own selves and from our wrong actions.</p>
   
     <p>Dear brothers and sisters, Hajj, the pilgrimage to the sacred House of Allah in Makkah, is a profound act of worship and devotion. It is one of the five pillars of Islam, and its importance lies in the deep spiritual connection it fosters between the believer and Allah.</p>
@@ -378,7 +378,7 @@
               <h4 class="text-light mb-4">Latest Post</h4>
               <div class="d-flex border-bottom border-secondary py-4">
                 <img
-                  src="img/blog-mini-1.jpg"
+                  src="img/blog-mini-1.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -391,7 +391,7 @@
               </div>
               <div class="d-flex py-4">
                 <img
-                  src="img/blog-mini-2.jpg"
+                  src="img/blog-mini-2.webp"
                   class="img-fluid flex-shrink-0"
                   alt=""
                 />
@@ -439,4 +439,5 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
