--- a/courses.html
+++ b/courses.html
@@ -222,8 +222,8 @@
               <a href="reading-courses-1.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-1.png"
-                  src="img/courses-1.png"
+                  data-src="img/courses-1.webp"
+                  src="img/courses-1.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -248,8 +248,8 @@
               <a href="recitation-courses-2.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-2.png"
-                  src="img/courses-2.png"
+                  data-src="img/courses-2.webp"
+                  src="img/courses-2.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -274,8 +274,8 @@
               <a href="tajweet-courses-3.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-3.png"
-                  src="img/courses-3.png"
+                  data-src="img/courses-3.webp"
+                  src="img/courses-3.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -300,8 +300,8 @@
               <a href="memorization-courses-4.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-4.png"
-                  src="img/courses-4.png"
+                  data-src="img/courses-4.webp"
+                  src="img/courses-4.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -328,8 +328,8 @@
               <a href="islamic-courses-5.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-5.png"
-                  src="img/courses-5.png"
+                  data-src="img/courses-5.webp"
+                  src="img/courses-5.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -354,8 +354,8 @@
               <a href="learn-arabic-courses-6.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-6.png"
-                  src="img/courses-6.png"
+                  data-src="img/courses-6.webp"
+                  src="img/courses-6.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -382,8 +382,8 @@
               <a href="ijazah-courses-7.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-7.png"
-                  src="img/courses-7.png"
+                  data-src="img/courses-7.webp"
+                  src="img/courses-7.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -408,8 +408,8 @@
               <a href="tafseer-courses-8.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-8.png"
-                  src="img/courses-8.png"
+                  data-src="img/courses-8.webp"
+                  src="img/courses-8.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -434,8 +434,8 @@
               <a href="islamic-studies-courses-9.html">
                 <img
                   class="card-img-top lazy"
-                  data-src="img/courses-1.png"
-                  src="img/courses-9.png"
+                  data-src="img/courses-1.webp"
+                  src="img/courses-9.webp"
                   style=""
               /></a>
               <div class="card-body" style="text-align: center">
@@ -774,5 +774,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
