--- a/tafseer-courses-8.html
+++ b/tafseer-courses-8.html
@@ -298,7 +298,7 @@
       <div class="col-md-6 mb-3 colum-left">
         <div class="title">
           <h2 class="mb-2">Thematic Exegesis & Contemporary Relevance</h2>
-          <img src="img/courses-8.png" alt="Tafseer Methods" style="width: 100%;">
+          <img src="img/courses-8.webp" alt="Tafseer Methods" style="width: 100%;">
           <span class="line"></span>
         </div>
       </div>
@@ -569,5 +569,6 @@
   <!-- Template Javascript -->
   <script src="js/main.js" defer></script>
 </html>
+
 
 
