--- a/islamic-courses-5.html
+++ b/islamic-courses-5.html
@@ -301,7 +301,7 @@
             <div class="title">
               <h2 class="mb-2">Advanced Islamic Theology: Exploring Depth</h2>
               <img
-                src="img/courses-5.png"
+                src="img/courses-5.webp"
                 alt="Islamic Books"
                 style="width: 100%"
               />
@@ -587,5 +587,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
