--- a/learn-arabic-courses-6.html
+++ b/learn-arabic-courses-6.html
@@ -298,7 +298,7 @@
             <div class="title">
               <h2 class="mb-2">Conversational Arabic Mastery</h2>
               <img
-                src="img/courses-6.png"
+                src="img/courses-6.webp"
                 alt="Arabic Dialogue"
                 style="width: 100%"
               />
@@ -581,5 +581,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
