--- a/ijazah-courses-7.html
+++ b/ijazah-courses-7.html
@@ -297,7 +297,7 @@
             <div class="title">
               <h2 class="mb-2">Ijazah Preparation Intensive</h2>
               <img
-                src="img/courses-7.png"
+                src="img/courses-7.webp"
                 alt="Ijazah Document"
                 style="width: 100%"
               />
@@ -580,5 +580,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
