--- a/recitation-courses-2.html
+++ b/recitation-courses-2.html
@@ -292,7 +292,7 @@
       <div class="col-md-6 mb-3 colum-left">
         <div class="title">
           <h2 class="mb-2">Understanding Quranic Tafsir</h2>
-          <img src="img/courses-2.png" alt="Tafsir Illustration" style="width: 100%;">
+          <img src="img/courses-2.webp" alt="Tafsir Illustration" style="width: 100%;">
           <span class="line"></span>
         </div>
       </div>
@@ -554,5 +554,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
