--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         <a href="index.html" class="navbar-brand">
           <h1 class="mb-0">Noor <span class="text-primary">Al-qran</span> </h1>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-          aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-label="Toggle navigation">
+          
           <span class="fa fa-bars text-primary"></span>
         </button>
         <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
@@ -1329,6 +1329,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
