--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
 
 
   <!-- About Start -->
-  <section class='    background: #f9fafb'>
+  <section style="background-color: #f9fafb;">
     <div class="container-fluid about py-5">
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-12">
             
-            <p style="color: #ffad05; font-size: 20px; text-shadow: 1px 1px 2px rgba(0,0,0,0.7);">
+            <p style="color: #ffad05; font-size: 20px;">
   Why Choose Us?
 </p>
 
@@ -1333,6 +1333,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
