--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="h-100 d-inline-flex align-items-center">
               <span class="far fa-envelope me-2 text-dark"></span>
-              <a href="#" class="text-secondary"><span>info@MmSoftwareGroup.com</span></a>
+              <a href="#" class="text-secondary"><span>info@nooralquranacademy.com</span></a>
             </div>
           </div>
           <div class="col-lg-5 text-end">
@@ -1307,7 +1307,7 @@ src="img/courses-3.webp"
           &copy; <a class="border-bottom" href="index.html">Noor Al-Quran</a>, All Right Reserved.
         </div>
         <div class="col-md-6 text-center text-md-end">
-          Designed By <a class="border-bottom" href="">MM Software Group</a>
+          Designed By <a class="border-bottom" href="https://mostafa-eldiba.github.io/personalWebsiteMostafaEldiba/">Mostafa Eldiba</a>
         </div>
       </div>
     </div>
@@ -1333,6 +1333,7 @@ src="img/courses-3.webp"
 </body>
 
 </html>
+
 
 
 
