--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
                             </div>
                             <div class="h-100 d-inline-flex align-items-center">
                                 <span class="far fa-envelope me-2 text-dark"></span>
-                                <a href="#" class="text-secondary"><span>info@example.com</span></a>
+                                <a href="#" class="text-secondary"><span>info@nooralquranacademy.com</span></a>
                             </div>
                         </div>
                         <div class="col-lg-5 text-end">
@@ -255,7 +255,7 @@
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By Mostafa Eldiba<a class="border-bottom" href="https://mostafa-eldiba.github.io/personalWebsiteMostafaEldiba/">HTML Codex</a>
                     </div>
                 </div>
             </div>
@@ -282,4 +282,5 @@
 
 
 </html>
+
 
