--- a/blog-more-6.html
+++ b/blog-more-6.html
@@ -89,7 +89,7 @@
               <div class="h-100 d-inline-flex align-items-center">
                 <span class="far fa-envelope me-2 text-dark"></span>
                 <a href="#" class="text-secondary"
-                  ><span>info@MmSoftwareGroup.com</span></a
+                  ><span>info@nooralquranacademy.com</span></a
                 >
               </div>
             </div>
@@ -620,7 +620,7 @@
             All Right Reserved.
           </div>
           <div class="col-md-6 text-center text-md-end">
-            Designed By <a class="border-bottom" href="">MM Software Group</a>
+            Designed By <a class="border-bottom" href="https://mostafa-eldiba.github.io/personalWebsiteMostafaEldiba/">Mostafa Eldiba</a>
           </div>
         </div>
       </div>
@@ -645,5 +645,6 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
