--- a/testimonial.html
+++ b/testimonial.html
@@ -80,7 +80,7 @@
               <div class="h-100 d-inline-flex align-items-center">
                 <span class="far fa-envelope me-2 text-dark"></span>
                 <a href="#" class="text-secondary"
-                  ><span>Mostafa Eldiba</span></a
+                  ><span>info@nooralquranacademy.com</span></a
                 >
               </div>
             </div>
@@ -491,6 +491,7 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
 
