--- a/contact.html
+++ b/contact.html
@@ -205,8 +205,8 @@
     <!-- End Whatsapp -->
 
     <!-- Contact Start -->
-    <div class="container-fluid contact py-5">
-      <div class="container py-5">
+    <div class="container-fluid contact pt-5">
+      <div class="container pt-5">
         <div
           class="text-center mx-auto mb-5 wow fadeIn"
           data-wow-delay="0.1s"
