--- a/team.html
+++ b/team.html
@@ -203,8 +203,8 @@
     <!-- End Whatsapp -->
 
     <!-- Team Start -->
-    <div class="container-fluid team py-5">
-      <div class="container py-5">
+    <div class="container-fluid team pt-5">
+      <div class="container pt-5">
         <div
           class="text-center mx-auto mb-5 wow fadeIn"
           data-wow-delay="0.1s"
@@ -216,7 +216,7 @@
         <div class="row g-5">
           <div class="col-lg-4 col-xl-5">
             <div class="team-img wow zoomIn" data-wow-delay="0.1s">
-              <img src="img/team-1.webp" class="img-fluid" alt="" />
+              <img src="img/team-1.webp" class="img-fluid" alt="President" />
             </div>
           </div>
           <div class="col-lg-8 col-xl-7">
