--- a/memorization-courses-4.html
+++ b/memorization-courses-4.html
@@ -305,7 +305,7 @@
                 Advanced Hifz Techniques: Perfection & Preservation
               </h2>
               <img
-                src="img/courses-4.png"
+                src="img/courses-4.webp"
                 alt="Hifz Progress"
                 style="width: 100%"
               />
