--- a/the-importance-of-hajj-in-islam-sermon.html
+++ b/the-importance-of-hajj-in-islam-sermon.html
@@ -266,7 +266,7 @@
       max-width: 100%;
       height: auto;
       display: block;
-      margin: 0 auto 16px;
+      margin: 30px auto 30px;
       border-radius: 8px;
     }
     @media (min-width: 768px) {
